[workspace]
members = [
  "01-one",
  "02-two",
  "03-three",
  "04-four",
  "05-five",
  "06-six",
  "07-seven",
  "08-eight",
  "09-nine",
  "10-ten",
  "11-eleven",
  "12-twelve",
  "13-thirteen",
  "14-fourteen",
  "15-fiveteen",
  "16-sixteen",
  "17-seventeen",
  "18-eighteen",
  "19-nineteen",
  "20-twenty",
  "21-twenty-one",
  "22-twenty-two",
  "23-twenty-three",
  "test_utils",
]
