[package]
name = "six"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
test_utils = { path = "../test_utils" }

[dev-dependencies]
anyhow = "1.0.66"
criterion = "0.4.0"

[[bench]]
name = "06-benchmark"
harness = false
